src/objects/ap_pdb_trip_hdr__x.object
<CustomObject>
    <description>caesars$ap_pdb_trip_hdr</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$ap_pdb_trip_hdr</externalName>
    <fields>
        <fullName>account_c_home_prop_cd_fk__c</fullName>
        <description>account_c_home_prop_cd_fk</description>
        <externalDeveloperName>account_c_home_prop_cd_fk</externalDeveloperName>
        <label>account_c_home_prop_cd_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_as_brand_flag__c</fullName>
        <description>c_as_brand_flag</description>
        <externalDeveloperName>c_as_brand_flag</externalDeveloperName>
        <label>c_as_brand_flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_as_cms_flag__c</fullName>
        <description>c_as_cms_flag</description>
        <externalDeveloperName>c_as_cms_flag</externalDeveloperName>
        <label>c_as_cms_flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_casino_flag__c</fullName>
        <description>c_casino_flag</description>
        <externalDeveloperName>c_casino_flag</externalDeveloperName>
        <label>c_casino_flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_curr_flag__c</fullName>
        <description>c_curr_flag</description>
        <externalDeveloperName>c_curr_flag</externalDeveloperName>
        <label>c_curr_flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_first_prop_visit__c</fullName>
        <description>c_first_prop_visit</description>
        <externalDeveloperName>c_first_prop_visit</externalDeveloperName>
        <label>c_first_prop_visit</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_home_prop_cd__c</fullName>
        <description>c_home_prop_cd</description>
        <externalDeveloperName>c_home_prop_cd</externalDeveloperName>
        <label>c_home_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_hotel_flag__c</fullName>
        <description>c_hotel_flag</description>
        <externalDeveloperName>c_hotel_flag</externalDeveloperName>
        <label>c_hotel_flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_market_cd__c</fullName>
        <description>c_prop_market_cd</description>
        <externalDeveloperName>c_prop_market_cd</externalDeveloperName>
        <label>c_prop_market_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <externalDeveloperName>c_quality_cd</externalDeveloperName>
        <label>c_quality_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rated_trip__c</fullName>
        <description>c_rated_trip</description>
        <externalDeveloperName>c_rated_trip</externalDeveloperName>
        <label>c_rated_trip</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_w2g_flag__c</fullName>
        <description>c_w2g_flag</description>
        <externalDeveloperName>c_w2g_flag</externalDeveloperName>
        <label>c_w2g_flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_week_cd__c</fullName>
        <description>c_week_cd</description>
        <externalDeveloperName>c_week_cd</externalDeveloperName>
        <label>c_week_cd</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_fk__c</fullName>
        <description>contact_fk</description>
        <externalDeveloperName>contact_fk</externalDeveloperName>
        <label>contact_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_end_dt__c</fullName>
        <description>d_end_dt</description>
        <externalDeveloperName>d_end_dt</externalDeveloperName>
        <label>d_end_dt</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_rpt_per__c</fullName>
        <description>d_rpt_per</description>
        <externalDeveloperName>d_rpt_per</externalDeveloperName>
        <label>d_rpt_per</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_start_dt__c</fullName>
        <description>d_start_dt</description>
        <externalDeveloperName>d_start_dt</externalDeveloperName>
        <label>d_start_dt</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <externalDeveloperName>d_timestamp</externalDeveloperName>
        <label>d_timestamp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_ap_pdb_trip_id__c</fullName>
        <description>i_ap_pdb_trip_id</description>
        <externalDeveloperName>i_ap_pdb_trip_id</externalDeveloperName>
        <label>i_ap_pdb_trip_id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_brand_trip_nbr__c</fullName>
        <description>i_brand_trip_nbr</description>
        <externalDeveloperName>i_brand_trip_nbr</externalDeveloperName>
        <label>i_brand_trip_nbr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_dmid__c</fullName>
        <description>i_dmid</description>
        <externalDeveloperName>i_dmid</externalDeveloperName>
        <label>i_dmid</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_events__c</fullName>
        <description>i_events</description>
        <externalDeveloperName>i_events</externalDeveloperName>
        <label>i_events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_days__c</fullName>
        <description>i_nbr_days</description>
        <externalDeveloperName>i_nbr_days</externalDeveloperName>
        <label>i_nbr_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_offers_red__c</fullName>
        <description>i_nbr_offers_red</description>
        <externalDeveloperName>i_nbr_offers_red</externalDeveloperName>
        <label>i_nbr_offers_red</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_offers_unred__c</fullName>
        <description>i_nbr_offers_unred</description>
        <externalDeveloperName>i_nbr_offers_unred</externalDeveloperName>
        <label>i_nbr_offers_unred</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_prop_market_type_id__c</fullName>
        <description>i_prop_market_type_id</description>
        <externalDeveloperName>i_prop_market_type_id</externalDeveloperName>
        <label>i_prop_market_type_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_trip_nbr__c</fullName>
        <description>i_trip_nbr</description>
        <externalDeveloperName>i_trip_nbr</externalDeveloperName>
        <label>i_trip_nbr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>market_fk__c</fullName>
        <description>market_fk</description>
        <externalDeveloperName>market_fk</externalDeveloperName>
        <label>market_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>week_code_fk__c</fullName>
        <description>week_code_fk</description>
        <externalDeveloperName>week_code_fk</externalDeveloperName>
        <label>week_code_fk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>caesars$ap_pdb_trip_hdr</label>
    <pluralLabel>caesars$ap_pdb_trip_hdr</pluralLabel>
</CustomObject>